Fixed some layout shifting

--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -165,3 +165,9 @@
     margin-left: auto;
     margin-right: 0;
 }
+
+.placeholder {
+    height: 55px;
+    width:100%;
+    clear: both;
+}
